--- a/reequest_system/Views/Home/Faculty.cshtml
+++ b/reequest_system/Views/Home/Faculty.cshtml
@@ -1,8 +1,11 @@
 ﻿@using reequest_system.Models
+@using reequest_system.ViewModels
 @{
     Faculty facultyinfo = Model.facultyinfo;
     Collage collegeInfo = Model.collegeInfo;
     CollageMajor majoreInfo = Model.majoreInfo;
+
+    List<vmExceptions> exceptionList = Model.exceptionList;
 
 }
 <meta charset="UTF-8">
@@ -82,26 +85,21 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td data-search="Anas Hajar">Anas Hajar</td>
-                                        <td>SE-421</td>
-                                        <td>Exception</td>
-                                        <td>I'm a senior and i only have this course left</td>
-                                        <td> <div class="btn btn-danger">reject</div> <div class="btn btn-success"> accept</div></td>
-                                        <td data-order="320800">........</td>
-                                        <td data-order="320800">........</td>
-                                    </tr>
-                                    <tr>
-                                        <td data-search="Garrett Winters">G. Winters</td>
-                                        <td>Accountant</td>
-                                        <td>Tokyo</td>
-                                        <td>63</td>
-                                        <td width="30%">  <button class="btn btn-danger">reject</button> <button class="btn btn-success"> accept</button></td>
-                                        <td data-order="170750">........</td>
-                                        <td data-order="320800">........</td>
-                                    </tr>
+                                    @foreach (var item in exceptionList)
+                                    {
+                                        <tr>
+                                            <td data-search="Anas Hajar">@item.StatusName</td>
+                                            <td>@item.CourseTitle</td>
+                                            <td>@item.RequestName</td>
+                                            <td>@item.Justification</td>
+                                              
+                                            <td data-order="320800">@item.SubmittedDate</td>
+                                            <td> <div class="btn btn-danger">reject</div> <div class="btn btn-success"> accept</div></td>
+                                            <td data-order="320800">@item.JustifiedBy</td>
+                                        </tr>
+                                    }
 
-                            </table>
+</table>
 
                         </div>
                     </div>
