--- a/reequest_system/Views/Home/stdn.cshtml
+++ b/reequest_system/Views/Home/stdn.cshtml
@@ -27,8 +27,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="profile-img">
-                    @*<img src="~/images/student-graduation(1).jpg" alt="" />*@
-
+                    <img  src="~/images/avatar-homme-final.jpg" />
                 </div>
             </div>
             <div class="col-md-6">
@@ -93,7 +92,7 @@
                                 <label>Student's email</label>
                             </div>
                             <div class="col-md-6">
-                                <p>RB0039@st.ubt.edu.sa</p>
+                                <p>@studInfo.Email</p>
                             </div>
                         </div>
                         <div class="row">
