--- a/reequest_system/Views/Shared/_nav.cshtml
+++ b/reequest_system/Views/Shared/_nav.cshtml
@@ -1,9 +1,10 @@
 ﻿<nav id="navbar_top" class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="#">logo</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav">
+    
+        <a class="navbar-brand" icon href="~/images/logo.png">logo</a>
+        @*<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav">
             <span class="navbar-toggler-icon"></span>
-        </button>
+        </button>*@
         <div class="collapse navbar-collapse" id="main_nav">
             <ul class="navbar-nav navbar-left ">
                 <li class="nav-item"><a class="nav-link" href="/Home/stdn">Student </a></li>
